--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    app.example:
-#        class: AppBundle\Example
+#    user.example:
+#        class: UserBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
