--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,8 +1,3 @@
-# Learn more about services, parameters and containers at
-# https://symfony.com/doc/current/service_container.html
-parameters:
-    #parameter_name: value
-
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -15,7 +10,4 @@ services:
         public: true
     # makes classes in src/AppBundle available to be used as services
     AppBundle\:
-        resource: '../../src/AppBundle/*'
-        # you can exclude directories or files
-        # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository}'
+        resource: '../../src/*Bundle/*'
