Corrigé quelques soucis dans la config de sécurité

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,4 +32,4 @@ security:
                 target: /
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/admin, roles: ROLE_ADMIN }
