Pages Profil et Observation demandent désormais un visiteur connecté

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,3 +33,4 @@ security:
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/(observation|profil), roles: ROLE_USER }
