--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,6 +8,22 @@ services:
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
         public: true
-    # makes classes in src/AppBundle available to be used as services
+    
+    # makes classes in bundles available to be used as services
     AppBundle\:
-        resource: '../../src/*Bundle/*'
+        resource: '../../src/AppBundle/*'
+
+    UserBundle\:
+        resource: '../../src/UserBundle/*'
+
+    # controllers are imported separately to make sure they're public
+    # and have a tag that allows actions to type-hint services
+    AppBundle\Controller\:
+        resource: '../../src/AppBundle/Controller/'
+        public: true
+        tags: ['controller.service_arguments']
+
+    UserBundle\Controller\:
+        resource: '../../src/UserBundle/Controller/'
+        public: true
+        tags: ['controller.service_arguments']
