--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,10 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    AppBundle\Service\FileUploader:
+        arguments:
+            $targetDir: '%images_directory%'
+
     # UserBundle\Controller\:
     #     resource: '../../src/UserBundle/Controller/'
     #     public: true
