--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,12 @@
-app:
-    resource: "@AppBundle/Controller/"
+core:
+    resource: "@AppBundle/Controller/CoreController.php"
     type:     annotation
     prefix:   /
+
+user:
+    resource: "@UserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 
 
