--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,19 +3,17 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        UserBundle\Entity\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
         ROLE_SUDO_ADMIN: [ROLE_USER, ROLE_ADMIN]
 
-    provider: in_memory
-
     providers:
-        in_memory:
-            memory:
-                users:
-                    user: { password: user, roles: [ 'ROLE_USER' ] }
-                    admin: { password: admin, roles: [ 'ROLE_ADMIN' ] }
+        main_provider:
+            entity:
+                class:    UserBundle\Entity\User
+                property: email
 
     firewalls:
         dev:
@@ -24,6 +22,7 @@ security:
         main:
             pattern: ^/
             anonymous: true
+            provider: main_provider
             form_login:
                 login_path: /connexion
                 check_path: /verif_connexion
