Rebase conflict resolved

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,35 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+        UserBundle\Entity\User: plaintext
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUDO_ADMIN: [ROLE_USER, ROLE_ADMIN]
+
     providers:
-        in_memory:
-            memory: ~
+        main_provider:
+            entity:
+                class:    UserBundle\Entity\User
+                property: email
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            pattern: ^/
+            anonymous: true
+            provider: main_provider
+            form_login:
+                login_path: /connexion
+                check_path: /verif_connexion
+            logout:
+                path: /deconnexion
+                target: /
 
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/(observation|profil), roles: ROLE_USER }
