--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,20 @@
-core:
-    resource: "@AppBundle/Controller/CoreController.php"
-    type:     annotation
-    prefix:   /
-
 user:
     resource: "@UserBundle/Controller/"
     type:     annotation
     prefix:   /
 
+core:
+    resource: "@AppBundle/Controller/CoreController.php"
+    type:     annotation
+    prefix:   /
 
+admin:
+    resource: "@AppBundle/Controller/AdminController.php"
+    type:     annotation
+    prefix:   /admin/
 
+login_check:
+    path: /verif_connexion
+
+logout:
+    path: /deconnexion
