--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,11 @@ core:
     type:     annotation
     prefix:   /
 
+App:
+    resource: "@AppBundle/Controller/ObservationController.php"
+    type:     annotation
+    prefix:   /
+
 user:
     resource: "@UserBundle/Controller/"
     type:     annotation
