--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,8 +9,8 @@ parameters:
     locale: fr
     images_directory: '%kernel.project_dir%/web/uploads/images'
 
-tinypng:
-    api_key: 'YN-tD6vaVHxYTx8XcfBLKFrlzXwwxgLi'
+# tinypng:
+#     api_key: 'YN-tD6vaVHxYTx8XcfBLKFrlzXwwxgLi'
 
 framework:
     #esi: ~
