--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,16 +64,27 @@ doctrine:
 swiftmailer:
     transport: '%mailer_transport%'
     host: '%mailer_host%'
+    port:       587
+    encryption: tls
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
 
 # Assetic Configuration
 assetic:
-  debug:          '%kernel.debug%'
-  use_controller: '%kernel.debug%'
-  filters:
-    cssrewrite: ~
-    jsqueeze:   ~
-    scssphp:
-      formatter: 'Leafo\ScssPhp\Formatter\Compressed'
+    debug:          '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    filters:
+        cssrewrite: ~
+        jsqueeze:   ~
+        scssphp:
+            formatter: 'Leafo\ScssPhp\Formatter\Compressed'
+
+# FOSUserBundle Configuration
+fos_user:
+    db_driver:     orm                       # Le type de BDD à utiliser, nous utilisons l'ORM Doctrine depuis le début
+    firewall_name: main                      # Le nom du firewall derrière lequel on utilisera ces utilisateurs
+    user_class:    UserBundle\Entity\User    # La classe de l'entité User que nous utilisons
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
