--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,3 @@
-user:
-    resource: "@UserBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
 core:
     resource: "@AppBundle/Controller/CoreController.php"
     type:     annotation
@@ -11,10 +6,23 @@ core:
 admin:
     resource: "@AppBundle/Controller/AdminController.php"
     type:     annotation
-    prefix:   /admin/
+    prefix:   /admin
 
-login_check:
-    path: /verif_connexion
+fos_user_security:
+    resource: "@UserBundle/Resources/config/routing/security.xml"
 
-logout:
-    path: /deconnexion
+fos_user_profile:
+    resource: "@UserBundle/Resources/config/routing/profile.xml"
+    prefix: /profil
+
+fos_user_register:
+    resource: "@UserBundle/Resources/config/routing/registration.xml"
+    prefix: /inscription
+
+fos_user_resetting:
+    resource: "@UserBundle/Resources/config/routing/resetting.xml"
+    prefix: /reinitialisation
+
+fos_user_change_password:
+    resource: "@UserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profil
