--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,8 +2,7 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-        UserBundle\Entity\User: plaintext
+        UserBundle\Entity\User: sha512
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
@@ -11,9 +10,7 @@ security:
 
     providers:
         main_provider:
-            entity:
-                class:    UserBundle\Entity\User
-                property: email
+            id: fos_user.user_provider.username_email
 
     firewalls:
         dev:
@@ -24,11 +21,13 @@ security:
             anonymous: true
             provider: main_provider
             form_login:
-                login_path: /connexion
-                check_path: /verif_connexion
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
             logout:
-                path: /deconnexion
+                path: fos_user_security_logout
                 target: /
+            remember_me:
+                secret: '%secret%'
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
