--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,3 +90,7 @@ fos_user:
         sender_name: "Nos Amis les Oiseaux"
     service:
         mailer: fos_user.mailer.twig_swift
+    use_username_form_type: false
+    registration:
+        form:
+            type: UserBundle\Form\Type\RegistrationType
