--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,3 +28,8 @@ services:
         resource: '../../src/AppBundle/Controller/'
         public: true
         tags: ['controller.service_arguments']
+
+    # override Regitration form for FOSUserBundle
+    UserBundle\Form\Type\RegistrationType:
+        tags:
+            - { name: form.type, alias: core_user_registration }
