Correction de quelques bugs

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,4 +31,4 @@ security:
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/(observation|profil), roles: ROLE_USER }
+        - { path: ^/observation, roles: ROLE_USER }
