--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,5 +30,7 @@ security:
                 secret: '%secret%'
 
     access_control:
+        - { path: ^/connexion$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/observation, roles: ROLE_USER }
