Mise en place du formulaire de contact

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,7 +4,7 @@ core:
     prefix:   /
 
 App:
-    resource: "@AppBundle/Controller/ObservationController.php"
+    resource: "@AppBundle/Controller/"
     type:     annotation
     prefix:   /
 
