--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,5 +33,9 @@ services:
         resource: '../../src/UserBundle/Controller/'
         public: true
         tags: ['controller.service_arguments']
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
 
 
