--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,6 +21,7 @@ framework:
         strict_requirements: ~
     form: ~
     csrf_protection: ~
+    validation: { enabled: true }
     validation: { enable_annotations: true }
     #serializer: { enable_annotations: true }
     templating:
