--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,10 @@ app:
     resource: "@AppBundle/Controller/AjaxController.php"
     type:     annotation
     prefix:   /ajax
+App:
+    resource: "@AppBundle/Controller/"
+    type:     annotation
+    prefix:   /
 
 user:
     resource: "@UserBundle/Controller/"
