--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,13 @@ services:
     UserBundle\Form\Type\RegistrationType:
         tags:
             - { name: form.type, alias: core_user_registration }
+
+    # override Profile form for FOSUserBundle
+    UserBundle\Form\Type\EditEmailType:
+        tags:
+            - { name: form.type, alias: core_user_profile }
+
+    # override Password form for FOSUserBundle
+    UserBundle\Form\Type\EditPasswordType:
+        tags:
+            - { name: form.type, alias: core_user_password }
