--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,5 +33,6 @@ security:
         - { path: ^/connexion$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/obs/, roles: ROLE_ADMIN }
         - { path: ^/observation, roles: ROLE_USER }
         - { path: ^/deconnexion, roles: ROLE_USER }
