--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
         "twig/extensions": "^1.2",
+        "tinify/tinify": "*",
         "symfony/assetic-bundle": "^2.7.1",
         "leafo/scssphp": "~0.6",
         "patchwork/jsqueeze": "~1.0"
